--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "training",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --watch app.js"
+    "build": "npx tsc",
+    "start": "npx ts-node src/app.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
   },
-  "type": "module"
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.6",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
+  }
 }
