--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/app.js",
-    "dev": "nodemon src/app.ts"
+    "dev": "nodemon src/app.ts",
+    "seed": "npx ts-node prisma/seed.ts"
   },
   "author": "",
   "license": "ISC",
@@ -17,11 +18,14 @@
     "helmet": "^7.1.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.6",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
+    "bcrypt": "^5.1.1",
     "eslint": "^8.56.0",
     "nodemon": "^3.0.2",
     "prisma": "^5.8.1",
