[jest] rename files, tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,6 @@
   "compilerOptions": {
     /* Language and Environment */
     "target": "es2016",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-
     /* Modules */
     "module": "commonjs",                                /* Specify what module code is generated. */
     // "rootDir": "./src",                                  /* Specify the root folder within your source files. */                        /* Conditions to set in addition to the resolver-specific defaults when resolving imports. */
@@ -23,5 +22,5 @@
     /* Completeness */
     "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
   },
-  "include": ["./src", "./build/**/*.ts"]
+  "include": ["./src", "./build/**/*.ts", "prisma/db.ts"]
 }
