--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "prisma": "^5.8.1",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3"
   }
 }
