--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon src/server.ts",
     "update-routes": "tsoa routes",
     "seed": "npx ts-node prisma/seed.ts",
+    "spec": "tsoa spec",
     "test": "jest"
   },
   "author": "",
@@ -18,6 +19,8 @@
     "eslint-plugin-jest": "^28.6.0",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "swagger-ui-express": "^5.0.1",
     "tsoa": "^6.0.1"
   },
   "devDependencies": {
@@ -27,7 +30,9 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.10.6",
+    "@types/swagger-ui-express": "^4.1.7",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
     "bcrypt": "^5.1.1",
