--- a/package.json
+++ b/package.json
@@ -7,30 +7,43 @@
     "build": "npx tsc",
     "dev": "nodemon src/server.ts",
     "update-routes": "tsoa routes",
-    "seed": "npx ts-node prisma/seed.ts"
+    "seed": "npx ts-node prisma/seed.ts",
+    "spec": "tsoa spec",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.8.1",
     "cors": "^2.8.5",
+    "eslint-plugin-jest": "^28.6.0",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "swagger-ui-express": "^5.0.1",
     "tsoa": "^6.0.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@jest/globals": "^29.7.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.10.6",
+    "@types/swagger-ui-express": "^4.1.7",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
     "bcrypt": "^5.1.1",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
+    "jest": "^29.7.0",
+    "jest-mock-extended": "^3.0.7",
     "nodemon": "^3.0.2",
     "prisma": "^5.8.1",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3"
   }
 }
