--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
     /* Language and Environment */
-    "target": "es2016",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-
+    "lib": ["ES2021"],
+    "target": "ES2021",                       /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
+    "baseUrl": "./src",
     /* Modules */
     "module": "commonjs",                                /* Specify what module code is generated. */
     // "rootDir": "./src",                                  /* Specify the root folder within your source files. */                        /* Conditions to set in addition to the resolver-specific defaults when resolving imports. */
@@ -23,5 +24,5 @@
     /* Completeness */
     "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
   },
-  "include": ["./src", "./build/**/*.ts"]
+  "include": ["./src", "./build/**/*.ts", "prisma/db.ts"]
 }
